Update PDF report functionality to send via email instead of download; store user email for report delivery

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                 <div class="success-actions">
                     <button class="btn btn-secondary" onclick="generarReportePDF()">
                         <i class="fas fa-file-pdf"></i>
-                        Descargar Reporte PDF
+                        Enviar Reporte PDF
                     </button>
                     </button>
                     <button class="btn btn-primary" onclick="restartForm()">
