--- a/reporte-template.html
+++ b/reporte-template.html
@@ -201,6 +201,14 @@
             font-size: 16px;
             margin-left: 15px;
         }
+
+        .multa-articulo {
+            display: block;
+            font-size: 12px;
+            color: #718096;
+            margin-top: 6px;
+            font-weight: 600;
+        }
         
         .total-section {
             background: linear-gradient(135deg, #e53e3e 0%, #fc8181 100%);
